[FEATURE] Update environment variables for qBittorrent integration and add validation checks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
     environment:
       QBIT_USERNAME: "${QBIT_USERNAME}"
       QBIT_PASSWORD: "${QBIT_PASSWORD}"
-      QBIT_TORRENTS_INFOS_ENDPOINT: "${QBIT_TORRENTS_INFOS_ENDPOINT}"
-      QBIT_LOGIN_ENDPOINT: "${QBIT_LOGIN_ENDPOINT}"
+      QBIT_PORT: "${QBIT_PORT}"
+      QBIT_IP : "${QBIT_IP}"
+      QBIT_TRACKER_STATUS : "${QBIT_TRACKER_STATUS}"
+      QBIT_POLLING_INTERVAL : "${QBIT_POLLING_INTERVAL}"
     ports:
       - 8000:8000
     develop:
