[FEATURE] Add support of exclusion tags

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       QBIT_TRACKER_STATUS : "${QBIT_TRACKER_STATUS}"
       QBIT_POLLING_INTERVAL : "${QBIT_POLLING_INTERVAL}"
       QBIT_CONTAINER_NAME: "${QBIT_CONTAINER_NAME}"
+      QBIT_EXCLUDE_TAG: "${QBIT_EXCLUDE_TAG}"
       DISCORD_API_WEBHOOK: "${DISCORD_API_WEBHOOK}"
     ports:
       - 8000:8000
